@@ -1,16 +1,13 @@
 package com.example.infinityweb_be.config;
 
-import com.example.infinityweb_be.config.CustomAuthEntryPoint;
-
 import com.example.infinityweb_be.security.CustomOAuth2FailureHandler;
 import com.example.infinityweb_be.security.CustomOAuth2SuccessHandler;
 import com.example.infinityweb_be.service.JwtAuthFilter;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.Lazy;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -25,74 +22,70 @@ import org.springframework.security.oauth2.server.resource.authentication.JwtGra
 import org.springframework.security.oauth2.server.resource.web.access.BearerTokenAccessDeniedHandler;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.authentication.logout.LogoutFilter;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
-
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity(securedEnabled = true)
 @Slf4j
+@RequiredArgsConstructor
 public class SecurityConfiguration {
+
+    private static final List<String> ALLOWED_ORIGINS = List.of(
+            "http://localhost:3000",
+            "https://infinitycat.site",
+            "https://www.infinitycat.site"
+    );
+
+    private static final List<String> PUBLIC_ENDPOINTS = List.of(
+            "/", "/auth/**", "/oauth2/**", "/uploads/**",
+            "/api/lexicon/test", "/api/lexicon/test-data", "/api/lexicon/phrases",
+            "/api/lexicon/units", "/api/tts/voices/**",
+            "/api/momo/**", "/api/vnpay/**", "/api/sepay/**",
+            "/client/api/course/**",
+            "/api/users/email/**",
+            "/api/student/dashboard/public", "/api/student/course/public/**",
+            "/api/student/quiz/lesson/**"
+    );
+
     private final JwtAuthFilter jwtAuthFilter;
     private final CustomAuthEntryPoint authEntryPoint;
     private final JwtDecoder jwtDecoder;
     private final CustomOAuth2SuccessHandler customOAuth2SuccessHandler;
     private final CustomOAuth2FailureHandler customOAuth2FailureHandler;
 
-    public SecurityConfiguration(
-            JwtAuthFilter jwtAuthFilter,
-            @Lazy CustomAuthEntryPoint authEntryPoint,
-            @Autowired JwtDecoder jwtDecoder,
-            CustomOAuth2SuccessHandler customOAuth2SuccessHandler,
-            CustomOAuth2FailureHandler customOAuth2FailureHandler
-    ) {
-        this.jwtAuthFilter = jwtAuthFilter;
-        this.authEntryPoint = authEntryPoint;
-        this.jwtDecoder = jwtDecoder;
-        this.customOAuth2SuccessHandler = customOAuth2SuccessHandler;
-        this.customOAuth2FailureHandler = customOAuth2FailureHandler;
-    }
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .csrf(csrf -> csrf.disable())
-                .addFilterBefore(corsFilter(), LogoutFilter.class)
-                .authorizeHttpRequests(auth -> auth
-                        // Các endpoint công khai
-                        .requestMatchers("/", "/auth/**", "/oauth2/**", "/uploads/**").permitAll()
-                        .requestMatchers("/api/lexicon/test", "/api/lexicon/test-data", "/api/lexicon/phrases", "/api/lexicon/units", "/api/tts/voices/**").permitAll()
-                        .requestMatchers("/api/momo/**", "/api/vnpay/**", "/api/sepay/**").permitAll()
-                        .requestMatchers("/client/api/course/**").permitAll()
-                        .requestMatchers("/api/users/email/**").permitAll()
-                        // Cho phép khách truy cập các API công khai của student
-                        .requestMatchers("/api/student/dashboard/public", "/api/student/course/public/**").permitAll()
-                        .requestMatchers("/api/student/quiz/lesson/**").permitAll()
-                        // Các endpoint yêu cầu xác thực
+        configureHttpSecurity(http);
+        http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
+        log.info("✅ Security filter chain configured.");
+        return http.build();
+    }
+
+    private void configureHttpSecurity(HttpSecurity http) throws Exception {
+        http.csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(PUBLIC_ENDPOINTS.toArray(new String[0])).permitAll()
                         .requestMatchers("/api/student/**").hasRole("STUDENT")
                         .requestMatchers("/api/admin/**").hasRole("ADMIN")
                         .requestMatchers("/client/api/user/progress/**").authenticated()
                         .requestMatchers("/api/**").authenticated()
                         .anyRequest().authenticated()
                 )
-
                 .oauth2Login(oauth2 -> oauth2
                         .successHandler(customOAuth2SuccessHandler)
                         .failureHandler(customOAuth2FailureHandler)
                 )
-
                 .oauth2ResourceServer(oauth2 -> oauth2
                         .jwt(jwt -> jwt.decoder(jwtDecoder))
                         .authenticationEntryPoint(authEntryPoint)
                 )
-
                 .exceptionHandling(ex -> ex
                         .authenticationEntryPoint(authEntryPoint)
                         .accessDeniedHandler(new BearerTokenAccessDeniedHandler())
@@ -100,42 +93,34 @@ public class SecurityConfiguration {
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .formLogin(form -> form.disable())
                 .logout(logout -> logout
-                                .logoutUrl("/logout") // khớp với API của bạn
-                                .logoutSuccessHandler((request, response, authentication) -> {
-                                    response.setStatus(HttpServletResponse.SC_OK); // trả về 200 OK
-                                })
-                                .permitAll()
-                        );
-        http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
-
-        log.info("✅ Security filter chain configured.");
-        return http.build();
+                        .logoutUrl("/logout")
+                        .logoutSuccessHandler((request, response, authentication) -> {
+                            response.setStatus(HttpServletResponse.SC_OK);
+                        })
+                        .permitAll()
+                );
     }
-
 
     @Bean
-    public CorsFilter corsFilter() {
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000",
-                "https://infinitycat.site",
-                "https://www.infinitycat.site"
-        ));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedOrigins(ALLOWED_ORIGINS);
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
-        source.registerCorsConfiguration("/**", config);
-        return new CorsFilter(source);
-    }
 
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
+        return source;
+    }
 
     @Bean
     public JwtAuthenticationConverter jwtAuthenticationConverter() {
         JwtGrantedAuthoritiesConverter converter = new JwtGrantedAuthoritiesConverter();
         converter.setAuthorityPrefix("");
         converter.setAuthoritiesClaimName("role");
+
         JwtAuthenticationConverter jwtConverter = new JwtAuthenticationConverter();
         jwtConverter.setJwtGrantedAuthoritiesConverter(converter);
         return jwtConverter;
